footer & nav layout issues

--- a/root/webapp/app/styles/patientview/sass/_nav.scss
+++ b/root/webapp/app/styles/patientview/sass/_nav.scss
@@ -154,7 +154,6 @@ html, body{
     overflow:hidden;
 
     .brand{
-        @include bootstrap-opacity(50);
         float:left;
         line-height:55px;
         padding:15px;
@@ -350,8 +349,9 @@ and (max-width : 1023px) {
             width: 130px;
 
             &.sub-brand {
-                width: 50px;
-                height: 20px;
+                width: 40px;
+                height: 15px;
+                margin:7px 0 0 5px;
             }
         }
     }
@@ -375,6 +375,10 @@ and (max-width : 1023px) {
                 }
             }
         }
+    }
+
+    .footer .legal-links{
+        width:40%;
     }
 
 }
